--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,11 @@ version: "3"
 services:
   db:
     image: postgres:11.2-alpine
-    environment:
-      POSTGRES_PASSWORD: ""
-      POSTGRES_USER: ""
-      POSTGRES_DB: ""
-    volumes:
-      - .pgdata:/var/lib/postgresql/data
+    env_file:
+      - development.env
     ports:
       - "5432:5432"
   server:
-    # image: name goes here
     depends_on:
       - db
     ports:
