--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js" 
+    "start": "node src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
     "install": "^0.13.0",
-    "npm": "^6.11.3"
+    "npm": "^6.11.3",
+    "pg": "^7.12.1",
+    "winston": "^3.2.1"
   }
 }
