pulling env vars into node app

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
 POSTGRES_PASSWORD=""
 POSTGRES_USER=""
 POSTGRES_DB=""
+POSTGRES_PORT=""
+
+# used for node-postgres env vars
+PGHOST='localhost'
+PGUSER=POSTGRES_USER
+PGDATABASE=POSTGRES_DB
+PGPASSWORD=POSTGRES_PASSWORD
+PGPORT=POSTGREST_PORT
+
+NODE_APP_PORT=""
