--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,11 @@ services:
       - development.env
     ports:
       - "5432:5432"
+    volumes:
+      - "/var/lib/postgresql/data"
   server:
     depends_on:
       - db
     ports:
-      - "3000:3000"
+      - "3001:3001"
     build: .
