--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,19 @@ services:
   db:
     image: postgres:11.2-alpine
     env_file:
-      - development.env
+      - .env
     ports:
       - "5432:5432"
     volumes:
-      - "/var/lib/postgresql/data"
+      - "dbdata:/var/lib/postgresql/data"
+    restart: on-failure
   server:
     depends_on:
       - db
+    env_file:
+      - .env
     ports:
       - "3001:3001"
     build: .
+volumes:
+  dbdata:
