--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "install": "^0.13.0",
     "npm": "^6.11.3",
     "pg": "^7.12.1",
+    "sql-template-strings": "^2.2.2",
     "winston": "^3.2.1"
   }
 }
