--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "helmet": "^3.21.0",
     "install": "^0.13.0",
     "npm": "^6.11.3",
     "pg": "^7.12.1",
