Live-reloading server all through compose 😚

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
     ports:
       - "3000:3000"
       - "5858:5858"
+    volumes:
+      - .:/usr/src/app
     build: .
 volumes:
   psqldb:
