--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --inspect=0.0.0.0:5858 src/index.js",
-    "start:watch": "nodemon --inspect=0.0.0.0:5858 src src/index.js"
+    "start:watch": "./node_modules/.bin/nodemon --inspect=0.0.0.0:5858 src src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "helmet": "^3.21.0",
     "install": "^0.13.0",
+    "nodemon": "^1.19.2",
     "pg": "^7.12.1",
     "sql-template-strings": "^2.2.2",
     "winston": "^3.2.1"
