--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Every year I do this. Now I have more time to build it as a full-stack app ideally living in GCP. ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node --inspect=0.0.0.0:5858 src/index.js",
     "start:watch": "./node_modules/.bin/nodemon --inspect=0.0.0.0:5858 src src/index.js"
   },
@@ -21,5 +21,8 @@
     "puppeteer": "^1.20.0",
     "sql-template-strings": "^2.2.2",
     "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0"
   }
 }
