--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "convert-csv-to-array": "^1.0.3",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "helmet": "^3.21.0",
     "install": "^0.13.0",
+    "json2csv": "^4.5.3",
     "nodemon": "^1.19.2",
     "pg": "^7.12.1",
     "puppeteer": "^1.20.0",
