update readme for linux, set port to default to 3000 for app running in docker and removed specific port for starting server with inspect. We shouldn't be starting this in dev mode really but that is for another time

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "start": "node --inspect=0.0.0.0:5858 src/index.js",
-    "start:watch": "./node_modules/.bin/nodemon --inspect=0.0.0.0:5858 src src/index.js"
+    "start:watch": "./node_modules/.bin/nodemon --inspect src src/index.js"
   },
   "author": "",
   "license": "ISC",
